# golang-gin-realworld-example-app

./: .gitignore  BUILD  Dockerfile  Makefile  WORKSPACE  deps.bzl  docker-compose.yml  go.mod  go.sum  hello.go  install-tracer.sh  readme.md  run.sh  startup.sh
articles/: BUILD.bazel  models.go  routers.go  serializers.go  validators.go
common/: BUILD.bazel
image/: BUILD
users/: BUILD.bazel  middlewares.go  models.go  routers.go  serializers.go  unit_test.go  validators.go
