load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "models.go",
        "routers.go",
        "serializers.go",
        "validators.go",
    ],
    importpath = "github.com/DataDog/golang-gin-realworld-example-app/articles",
    visibility = ["//visibility:public"],
    deps = [
        "//common:go_default_library",
        "//users:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_gosimple_slug//:go_default_library",
        "@com_github_jinzhu_gorm//:go_default_library",
    ],
)
